# dspy-monty-interpreter

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/skills/monty-updater/: SKILL.md
.github/workflows/: check-monty-release.yml
docs/plans/: 2026-04-10-tool-callbacks-design.md  2026-04-10-tool-callbacks-plan.md
src/dspy_monty_interpreter/: __init__.py  interpreter.py
tests/: test_e2e_rlm.py  test_interpreter.py
