[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dspy-monty-interpreter"
version = "0.1.3"
description = "DSPy CodeInterpreter implementation using Monty, a secure Python interpreter written in Rust"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Interpreters",
]
dependencies = [
    "dspy>=3.0",
    "pydantic-monty>=0.0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dspy_monty_interpreter"]
