[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dspy-monty-interpreter"
version = "0.2.3"
description = "DSPy CodeInterpreter implementation using Monty, a secure Python interpreter written in Rust"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Interpreters",
]
dependencies = [
    "dspy>=3.0",
    "pydantic-monty>=0.0.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "python-dotenv>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests that call a live LLM API (requires API key in .env)",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dspy_monty_interpreter"]
